# grapevine

./: .gitignore  LICENSE  README.md  anonymisation-plan.md  pyproject.toml  run_all_benchmarks.sh
.github/workflows/: release.yml  run_tests.yml
benchmarks/: adversarial.csv  adversarial.py  analyse_results.py  linear.csv  linear.py  linear_pathway  linear_pathway.csv  linear_pathway.py  linear_pathway.stan  methionine.csv  methionine.py  methionine_pathway.csv  methionine_pathway.py  optimistix_example.py  readme.md  rosenbrock.csv  rosenbrock.py  simple_example  simple_example.csv  simple_example.py  simple_example.stan  test_functions.csv  test_functions.py  trajectory.csv  trajectory.py
demos/: demo.py
src/grapevine/: __init__.py  adaptation.py  benchmarking.py  example_functions.py  grapenuts.py  heuristics.py  integrator.py  util.py
src/grapevine/examples/: linear_pathway.py  methionine.py  rosenbrock.py  simple_example_problem.py
tests/: simple_example_problem.py  test_adaptation.py  test_grapenuts.py  test_integrator.py  test_util.py
