[project]
name = "grapevine-mcmc"
version = "0.1.0"
description = "Faster Hamiltonian trajectories for problems with guesses, using Blackjax"
authors = [
    {name = "Teddy Groves", email = "tedgro@dtu.dk"},
]
dependencies = [
    "blackjax>=1.2.4",
    "jax==0.4.33",
    "arviz>=0.20.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
demos = [
    "optimistix>=0.0.8",
]
benchmarks = [
    "cmdstanpy>=1.2.4",
    "polars>=1.12.0",
    "matplotlib>=3.9.2",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "chex>=0.1.87",
    "optimistix>=0.0.9",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/grapevine"]
