[project]
name = "grapevine-mcmc"
version = "0.1.0"
description = "Faster Hamiltonian trajectories for problems with guesses, using Blackjax"
authors = [
    {name = "Teddy Groves", email = "tedgro@dtu.dk"},
]
dependencies = [
    "blackjax>=1.2.4",
    "arviz>=0.20.0",
    "polars>=1.19.0",
    "diffrax>=0.6.2",
    "jax>=0.4.38",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/grapevine"]

[dependency-groups]
dev = [
    "chex>=0.1.88",
    "optimistix>=0.0.10",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
benchmarks = [
    "cmdstanpy>=1.2.5",
    "diffrax>=0.6.2",
    "matplotlib>=3.10.0",
    "polars>=1.19.0",
    "enzax@git+https://github.com/dtu-qmcm/enzax.git#main",
]
